# funk

./: Makefile.am  Makefile.in  README  configure
autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
src/base/: THOUGHTS
src/eggs/: Makefile
src/eggs/bit-cat/: Makefile  bit-cat.html  bit-cat.scm  bit-cat.setup
src/eggs/crc16/: Makefile  crc16.html  crc16.scm  crc16.setup
src/eggs/raw-sockets/: Makefile  doc.scm  raw-sockets.exports  raw-sockets.html  raw-sockets.scm  raw-sockets.setup
src/eggs/raw-sockets-experimental/: raw-sockets-experimental.scm  raw-sockets-experimental.setup
src/eggs/raw-sockets.old/: raw-sockets.html  raw-sockets.setup
src/eggs/rawsock/: doc.scm  rawsock.exports  rawsock.html  rawsock.scm  rawsock.setup
src/elf-random/: validate.scm
src/scm/: default-fcns.scm  demo1.scm  demo2.scm  ethernet.scm  ip4.scm  make-eth-packet.scm  rand.scm  table.scm  tcp.scm
